Add invokable controllers

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -73,13 +73,13 @@
     <body>
     {% block body %}
       {% block header %}
-        {{ render(controller('App\\Controller\\LayoutController::header')) }}
+        {{ render(controller('App\\Controller\\Layout\\Header')) }}
       {% endblock %}
 
       <main>{% block content %}{% endblock %}</main>
 
       {% block footer %}
-         {{ render(controller('App\\Controller\\LayoutController::footer')) }}
+         {{ render(controller('App\\Controller\\Layout\\Footer')) }}
       {% endblock %}
     {% endblock %}
 
