--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -9,7 +9,6 @@
 {% set lastUpdate = dso.updatedAt|date('dateFormatLong'|trans) %}
 {#https://coxpi.draftium.site/#}
 {% set labels = {
-  'last_update_item': 'last_update_item'|trans({ '%date%': lastUpdate}),
   'skymap': 'skymap'|trans,
   'galery': 'galery'|trans,
   'astrobin_msg': 'astrobin.message'|trans,
@@ -20,12 +19,12 @@
   <div id="appDso"
     data-dso-widget
     data-imgcover="{{ dso.astrobin.url_regular|default('default') }}"
-    data-imgcoveralt="{{ imgCoverAlt|default('') }}"
+    data-imgcoveralt="{{ dso.imgCoverAlt|default('') }}"
     data-imgcovermap="{{ dso.astrobin.url_skyplot|default(null) }}"
     data-dso="{{ dsoData|json_encode }}"
     data-title="{{ dso.title }}"
     data-description="{{ dso.description }}"
-    data-images="{{ images|json_encode }}"
+    data-images="{{ dso.gallery|json_encode }}"
     data-title-const="{{ dso.constellation.title }}"
     data-dso-const="{{ dso_by_const|json_encode }}"
     data-filter="{{ list_types_filters|json_encode }}"
