--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -24,7 +24,7 @@
     data-dso="{{ dsoData|json_encode }}"
     data-title="{{ dso.title }}"
     data-description="{{ dso.description }}"
-    data-images="{{ dso.gallery|json_encode }}"
+    data-images="{{ images|json_encode }}"
     data-title-const="{{ dso.constellation.title }}"
     data-dso-const="{{ dso_by_const|json_encode }}"
     data-filter="{{ list_types_filters|json_encode }}"
